Fix static map layout issues in IE and FireFox.

--- a/src/htdocs/modules/summary/0-0-1/css/_SummaryPage.scss
+++ b/src/htdocs/modules/summary/0-0-1/css/_SummaryPage.scss
@@ -20,6 +20,7 @@
 
 		> img {
 			position:relative;
+			width:100%;
 			z-index:-1;
 		}
 	}
